# linkchecker-gui

./: .flake8  .gitignore  .pylintrc  Makefile  README.md  changelog.txt  linkchecker-gui  pyoxidizer.bzl  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  release-files.yml
doc/: Makefile  de.po  linkchecker-gui.desktop  po4a.conf
doc/de/: linkchecker-gui.1
doc/en/: linkchecker-gui.1
doc/html/: Makefile  html.footer  html.header  index.html  index.txt  lccollection.qhcp  lcdoc.qhp  sphinxdoc.css
linkcheck_gui/: Makefile  __init__.py  __main__.py  checker.py  configuration.py  contextmenu.py  debug.py  editor.py  editor_qsci.py  editor_qt.py  help.py  lineedit.py  linkchecker_rc.py  linkchecker_ui_debug.py  linkchecker_ui_editor.py  linkchecker_ui_main.py  linkchecker_ui_options.py  logger.py  options.py  projects.py  properties.py  recentdocs.py  settings.py  statistics.py  syntax.py  updater.py  urlmodel.py  urlsave.py  validator.py
linkcheck_gui/rc/: Makefile  linkchecker.qrc
linkcheck_gui/ui/: main.ui  options.ui
tests/: __init__.py  test_containers.py  test_gui.py
tools/: hatch_build.py
